--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/eressea/tutorials#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy": "^3.1.0",
+    "eleventy-plugin-page-assets": "^0.3.0",
     "jest": "^26.6.3",
     "moment": "^2.29.1"
   },
