--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,9 @@ name: Build Eleventy
 on:
   push:
     branches:
-      - master
+      - main
+  pull_request:
+    types: [ opened, edited, reopened ]
 
 jobs:
   build:
